[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "multiversx-sdk"
version = "1.5.2"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "The MultiversX Python SDK."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodomex==3.19.1",
  "protobuf>=5.27.2,<6.0.0",
  "cryptography==43.0.1",
  "pynacl==1.5.0",
  "mnemonic==0.21",
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
ledger = ["ledgercomm[hid]"]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py"

[tool.hatch.build]
include = [
  "multiversx_sdk/**",
  "multiversx_sdk/py.typed"
]

exclude = [
  ".github",
  "./examples",
  ".vscode",
  "./multiversx_sdk/testutils/",
  "./docs",
  "*_test.py"
]
