[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-sdk-core"
version = "0.3.3"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "Core components of the MultiversX Python SDK."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodomex==3.16.0"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-core"
