[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "mx-sdk-erdpy-network-providers"
version = "0.5.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "MultiversX: network providers for erdpy."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests==2.24.0",
  "erdpy_core==0.3.0"
]

[project.urls]
"Homepage" = "https://github.com/ElrondNetwork/sdk-erdpy-network-providers"
